Utilized CSS to make page responsive and fill out styles.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,35 @@
+html, body{
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
 body{
     color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, monospace, sans-serif;
     background-color: black;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+header{
+    width: 98%;
+    padding: 1%;
+    position: sticky;
+    top: 0;
+    background-color: #222222;
+}
+img{
+    max-width: 98%;
+    margin: 1% auto 1% auto;
+    width: auto;
+    height: auto;
 }
 footer{
-    width: 100%;
+    width: 98%;
     text-align: center;
+    padding: 1%;
 }
 a{
     color: white;
