--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,8 @@ footer{
     width: 98%;
     text-align: center;
     padding: 1%;
+    border-top: 1px solid #FFFFFF;
+    margin-top: 15px;
 }
 a{
     color: white;
